--- a/styles/index.css
+++ b/styles/index.css
@@ -18,7 +18,7 @@ header {
 
 .main {
   display: grid;
-  grid-template-columns: 50% 600px;
+  grid-template-columns: 50% 50%;
   height: 100%;
 }
 
@@ -46,11 +46,14 @@ input {
   width: 100%;
 }
 
-#invitation {
-  box-shadow: 1px black;
-  margin: 1em;
-  font-size: 150%;
+.invitation {
   width: 100%;
+  height: 100%;
+}
+
+#invitationCard {
+  width: auto;
+  height: 100%;
   transition: background-color, color, font-family, 1s;
   display: grid;
 
@@ -77,19 +80,19 @@ input {
   font-size: 170%;
 }
 .formal {
-  background: url("../images/floral-background2.jpg") no-repeat;
+  background: url("../images/floral-background2.jpg") no-repeat center;
   background-size: contain;
   font-family: "Tangerine", cursive;
 }
 
 .spring {
-  background: url("../images/floral-background1.jpg") no-repeat;
+  background: url("../images/floral-background1.jpg") no-repeat center;
   background-size: contain;
   font-family: "Dancing Script", ariel;
 }
 
 .artDeco {
-  background: url("../images/artdeco.jpg") no-repeat;
+  background: url("../images/artdeco.jpg") no-repeat center;
   background-size: contain;
   color: white;
   font-family: "Poiret One";
