--- a/styles/index.css
+++ b/styles/index.css
@@ -1,19 +1,26 @@
 body {
   text-align: center;
-  padding: 0;
+  padding: 0px;
   margin: 0;
   height: 90vh;
-  width: 100vw;
+  background-color: #2b2b2b;
 }
 
 header {
-  font-size: 450%;
+  font-size: 200%;
   height: 90px;
   line-height: 100px;
-  text-align: left;
+  text-align: center;
+  color:white;
   padding-left: 1em;
-  font-family: "Tangerine", cursive;
-  box-shadow: 3px 3px rgba(100, 100, 100, 0.3);
+  padding: .25em;
+  font-family: roboto;
+}
+
+label{
+color: white;
+font-family: roboto;
+font-size: 1em;
 }
 
 .main {
@@ -23,27 +30,70 @@ header {
 }
 
 .style {
-  text-align: center;
-  clear: both;
-  display: inline-block;
+  margin: 0 -5px;
+/*   text-align: center; */
+/*   clear: both;
+  display: inline-block; */
 }
 .style input {
-  opacity: 0;
-  float: left;
-}
-.style label {
-  float: left;
+opacity: 0;
+  float: center;
 }
 
-#form {
+form {
   text-align: left;
   font-size: 150%;
-  height: 100%;
-  padding: 1em;
+/*   height: 100%; */
+  padding: 0 0 0 30%;
 }
 
 .textInput {
   font-size: 100%;
+  background-color: #2b2b2b;
+  border: 4px solid white;
+  padding: 10px;
+  margin: 10px;
+  font-family: roboto;
+  color: white;
+  outline:none;
+}
+
+.textInput:hover {
+  border: 4px solid #32cefe;
+  outline: none;
+}
+
+.textInput:active {
+  border: 4px solid #32cefe;
+  outline: none;
+}
+
+.textInput:focus {
+  border: 4px solid #32cefe;
+  outline: none;
+}
+
+#top{
+  font-family: roboto;
+  text-decoration: underline;
+}
+
+#top:hover{
+  font-family: roboto;
+  text-decoration: underline;
+  color: #32cefe;
+}
+
+#top:active{
+  font-family: roboto;
+  text-decoration: underline;
+  color: #32cefe;
+}
+
+#top:focus{
+  font-family: roboto;
+  text-decoration: underline;
+  color: #32cefe;
 }
 
 .invitation {
@@ -82,7 +132,7 @@ header {
 .formal {
   background: url("../images/floral-background2.jpg") no-repeat center;
   background-size: contain;
-  font-family: "Tangerine", cursive;
+  font-family: "Futura", cursive;
 }
 
 .spring {
